syntax = "proto3";

package recipe;

// Definición del mensaje de receta
message Recipe {
  string id = 1;
  string title = 2;
  string description = 3;
  string category = 4;
  repeated Ingredient ingredients = 5;
  repeated string steps = 6;
  string userId = 7;
}

// Definición del mensaje de ingrediente
message Ingredient {
  float quantity = 1;
  string unit = 2;
  string name = 3;
}

// Solicitud para crear recetas en lote
message BulkCreateRequest {
  repeated Recipe recipes = 1;
}

// Respuesta para operaciones masivas
message BulkResponse {
  repeated string createdIds = 1;
  string message = 2;
}

// Servicio gRPC
service RecipeService {
  rpc BulkCreateRecipes (BulkCreateRequest) returns (BulkResponse);
  rpc GetAllRecipes (RecipeFilter) returns (RecipeQueryResponse);
  rpc GetMyRecipes (UserId) returns (RecipeQueryResponse);
  rpc UpdateRecipe (UpdateRecipeRequest) returns (Recipe);
  rpc DeleteRecipe (RecipeId) returns (MessageResponse);
}

// Filtrar recetas
message RecipeFilter {
  string category = 1;
  string title = 2;
}

message RecipeQueryResponse {
  repeated Recipe recipes = 1;
}

message UpdateRecipeRequest {
  string id = 1;
  Recipe recipe = 2;
}

message RecipeId {
  string id = 1;
}

message MessageResponse {
  string message = 1;
}